--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,7 +28,7 @@ Base Elements
 }
 
 .beneath-header-container p {
-    color: grey;
+    color: #708090;
 }
 
 h2 {
@@ -69,16 +69,10 @@ hr {
 
 /* Container for Form */
 
-.form {
-    width: 95%;
-    margin: auto;
-}
-
-/* Form Section */
-
 #contact,
 #newsletter {
     border: none;
+    width: 95%;
 }
 
 legend {
@@ -94,7 +88,7 @@ label {
     /*margin-left: .5em;*/
 }
 
-input[type="text"]:nth-of-type(1n+1),
+input[type="text"],
 input[type="email"],
 input[type="tel"],
 select[name="State"] {
@@ -116,6 +110,7 @@ select[name="State"] {
     font-family: merriweather;
 }
 
+
 select:hover,
 input[type="submit"],
 input[type="radio"],
@@ -123,23 +118,25 @@ input[type="checkbox"] {
     cursor: pointer;
 }
 
-input:focus,
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
 input[type="select"]:focus {
-    border: .15em solid darkgray;
+    border: .15em solid #708090;
     text-indent: 1em;
     transition: background-color 0.5s ease;
-    background-color: whitesmoke
+    background-color: #708090;
 }
 
-textarea:focus {
+#textarea:focus {
     outline: none;
-    border: .15em solid darkgray;
+    border: .15em solid #708090;
     transition: background-color 0.5s ease;
-    background-color: whitesmoke
+    background-color: #708090;
 }
 
 select:first-child {
-    color: darkgray;
+    color: #708090;
 }
 
 
@@ -150,12 +147,14 @@ select:first-child {
 }
 
 
-textarea {
+#textarea {
     background-color: #f5f5f5;
     display: block;
-    width: 95%;
+    width: 100%;
     height: 5em;
     border: none;
+    border-radius: .5em;
+
 }
 
 #zipcode {
@@ -164,7 +163,7 @@ textarea {
 
 #submit {
     display: inline-block;
-    width: 95%;
+    width: 100%;
     text-align: center;
     margin: auto;
     margin-top: 1em;
@@ -193,7 +192,8 @@ Desktop/tablet Viewport
 
 @media (min-width: 760px) {
 
-    .form {
+    #contact,
+    #newsletter {
         width: 60%;
         margin: auto;
     }
@@ -226,7 +226,7 @@ Desktop/tablet Viewport
         width: 30%;
     }
 
-    fieldset#newsletter textarea[type="text"] {
+    fieldset#newsletter textarea {
         width: 100%;
         border-radius: .5em;
         padding: 0;
