--- a/style.css
+++ b/style.css
@@ -67,18 +67,13 @@ hr {
     width: 95%;
 }
 
-/* Container for Form */
-
-.form {
-    width: 95%;
-    margin: auto;
-}
-
 /* Form Section */
 
 #contact,
 #newsletter {
     border: none;
+    width: 95%;
+    margin: auto;
 }
 
 legend {
@@ -133,9 +128,9 @@ input[type="select"]:focus {
 
 textarea:focus {
     outline: none;
-    border: .15em solid darkgray;
+    border: .15em solid red;
     transition: background-color 0.5s ease;
-    background-color: whitesmoke
+    background-color: darkgray;
 }
 
 select:first-child {
@@ -150,12 +145,14 @@ select:first-child {
 }
 
 
-textarea {
+#textarea {
     background-color: #f5f5f5;
     display: block;
-    width: 95%;
+    width: 100%;
     height: 5em;
     border: none;
+    border-radius: 10px;
+    margin: auto;
 }
 
 #zipcode {
@@ -164,7 +161,7 @@ textarea {
 
 #submit {
     display: inline-block;
-    width: 95%;
+    width: 100%;
     text-align: center;
     margin: auto;
     margin-top: 1em;
@@ -193,7 +190,8 @@ Desktop/tablet Viewport
 
 @media (min-width: 760px) {
 
-    .form {
+    #contact,
+    #newsletter {
         width: 60%;
         margin: auto;
     }
@@ -228,7 +226,6 @@ Desktop/tablet Viewport
 
     fieldset#newsletter textarea[type="text"] {
         width: 100%;
-        border-radius: .5em;
         padding: 0;
     }
 
