--- a/CSS/style.css
+++ b/CSS/style.css
@@ -142,7 +142,7 @@ select:first-child {
 
 .styled-select select {
     height: 4em;
-    background-image: url(../32195.png);
+    /*background-image: url(../32195.png);*/
 
 }
 
