--- a/CSS/style.css
+++ b/CSS/style.css
@@ -93,7 +93,7 @@ input[type="text"]:nth-of-type(1n+1),
 input[type="email"],
 input[type="tel"],
 select[name="State"] {
-    background: #f5f5f5;
+    background: #F5F5F5;
     padding: 1.25em 0em;
     border-radius: .25em;
     border: none;
@@ -118,12 +118,15 @@ input[type="checkbox"] {
     cursor: pointer;
 }
 
-input:focus,
-input[type="select"]:focus {
-    border: .15em solid darkgray;
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+input[type="select"]:focus,
+#textarea:focus {
+    border: .15em solid #778899;
     text-indent: 1em;
     transition: background-color 0.5s ease;
-    background-color: whitesmoke
+    background-color: #778899;
 }
 
 textarea:focus {
@@ -153,6 +156,12 @@ select:first-child {
     border: none;
     border-radius: 10px;
     margin: auto;
+}
+
+.textarea-label {
+    display: inline-block;
+    padding: 0.5em 0;
+
 }
 
 #zipcode {
