--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ h1 {
 }
 
 
-.search-input {
+#search {
     display: block;
     height: 30px;
     width: 460px;
@@ -69,7 +69,9 @@ li {
     width: 0%;
 }
 
-
+.hide {
+    display: none;
+}
 
 /*Overlay Content*/
 
